gccida/c3/c_init_decl_processing
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3521:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *identifier; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3524:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3525:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3526:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3530:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3531:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3532:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *value_type; // [rsp+18h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3533:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *endlink; // [rsp+38h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3559:24: error: expected expression
endlink = ( tree_node *)*( &global_trees + 32); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3559:13: error: use of undeclared identifier 'tree_node'
endlink = ( tree_node *)*( &global_trees + 32); 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3561:27: error: expected expression
value_type = ( tree_node *)*( &global_trees + 28); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/c-decl.c:3561:16: error: use of undeclared identifier 'tree_node'
value_type = ( tree_node *)*( &global_trees + 28); 
               ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_init_decl_processing/src/obj/c-decl.o] Error 1
